#fixed extended case style for col-md-12

--- a/ExtendedCase/ExtendedCase.WebComponent/src/styles/css/site.scss
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/styles/css/site.scss
@@ -74,9 +74,9 @@
         z-index: 3;
     }
 
-    ec-tab {
+/*     ec-tab {
         .col-md-12 { padding-right:0; }
-    }
+    } */
 
     ec-section, ec-review-section {
         h3 {
