--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseValidation.cshtml
@@ -67,6 +67,7 @@
         extendedCaseInvalidMessage: '@Translation.GetForJS("Utökat ärende är inte giltigt")',
         computerUserCategories: @Html.Raw(Json.Encode(Model.ComputerUserCategories != null ? Model.ComputerUserCategories.Select(o => new { o.Name, o.IsReadOnly, o.Id }).ToDictionary(o => o.Id.ToString(), o => o) : null)),
         fileExistError: '@Translation.GetForJS("Bifogad fil är borttagen från ärendet")',
+        currentUserName: '@Model.CurrentUserName',
         applicationType: '@ApplicationTypes.Helpdesk',
         caseFieldIds: {
             Caption: "case__Caption",
