--- a/ExtendedCase/ExtendedCase.WebComponent/src/styles/css/site.scss
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/styles/css/site.scss
@@ -110,7 +110,7 @@
             padding-right: 0;
 
             &:first-child {
-                text-align: right;
+                text-align: left;
             }
         }
 
@@ -403,6 +403,10 @@
         color: #9e9e9e;
         cursor: default;
         pointer-events: none;
+    }
+
+    select-dropdown > div .options ul li:first-child {
+      min-height: 20px;
     }
     //////////////////////////////////////////// END ng-select css.
 
