--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
@@ -20,7 +20,7 @@
     {
         if (Model.IsTwoAttachmentsMode)
         {
-            return logFile.LogType == LogFileType.External ? "fa sm-fa fa-file-o" : "fa sm-fa fa-file";    
+            return logFile.LogType == LogFileType.External ? "fa sm-fa fa-file-o" : "fa sm-fa fa-file";
         }
         return "icon-file";
     }
@@ -29,7 +29,7 @@
     {
         if (Model.IsTwoAttachmentsMode)
         {
-            return logFile.LogType == LogFileType.External ? Translation.GetCoreTextTranslation("External log file") : Translation.GetCoreTextTranslation("Internal log file");
+            return logFile.LogType == LogFileType.External ? Translation.GetCoreTextTranslation("Extern bifogad fil") : Translation.GetCoreTextTranslation("Intern bifogad fil");
         }
         return string.Empty;
 
