Products url fix

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Licenses/Views/Products/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Licenses/Views/Products/Index.cshtml
@@ -20,7 +20,7 @@
 @section Actions {
     <ul class="secnav">               
         <li>
-            @Html.ActionLink(Translation.Get("Ny produkt"), "Product", "Products", new { @class = "btn" })
+            @Html.ActionLink(Translation.Get("Ny produkt"), "Product", "Products", null, new { @class = "btn" })
         </li>
     </ul>
 }
