#73302 - attachment list is too long if I clicked the clips button

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_CaseAttachExistFile.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_CaseAttachExistFile.cshtml
@@ -8,7 +8,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h5>@Translation.GetCoreTextTranslation("Bifogade filer")</h5>
             </div>
-            <div class="modal-body max-height-600">
+            <div class="modal-body max-height-70-percent">
                 <div id="attachedFiles">
                     @*Populated by ajax from server*@
                 </div>
