--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3703,8 +3703,14 @@ a.inactive {
         padding: 1px 2px;
     }
 
-div.modal-body.max-height-600 {
-    max-height: 600px;
+div.modal-body.max-height-70-percent {
+    max-height: calc(100vh * 0.7);
+}
+
+@media(max-height: 700px) {
+    div.modal-body.max-height-70-percent {
+        max-height: calc(100vh * 0.6);
+    }
 }
 
 .case-dropdown-area {
