--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Plupload.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Plupload.cshtml
@@ -29,7 +29,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3>&nbsp;</h3>
     </div>
-    <div class="modal-body max-height-600">
+    <div class="modal-body max-height-70-percent">
         <form onsubmit="return false;">
             <div class="form-group">
                 <label >@Translation.Get("1. Skriv ett filnamn (kan lämnas blankt)")</label>
