[Fix] Web component automated version added

--- a/ExtendedCase/ExtendedCase.WebComponent/src/app/components/extended-case-element.component.html
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/app/components/extended-case-element.component.html
@@ -26,5 +26,6 @@
 <ng-template #loading>
     Loading Data...
 </ng-template>
+<div style="display: none">Web Component version: {{version}}</div>
 
 
