--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch.cshtml
@@ -16,7 +16,7 @@
     </div>
 </div>
 <form id="frmAdvanceSearch" name="frmAdvanceSearch">
-    <div class="AdvancedSearch-overview page">
+    <div class="advancedSearch-overview page">
         <div class="content">
             <div class="container">
                 <ul class="nav nav-tabs" id="myTab">
