--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/AdvancedSearch/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
 </div>
 <form id="frmAdvanceSearch" name="frmAdvanceSearch">
-    <div class="AdvancedSearch-overview page">    
+    <div class="advancedSearch-overview page">    
         <div class="content">
             <div class="container">
                 <ul class="nav nav-tabs" id="myTab">
