--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Edit.cshtml
@@ -45,6 +45,7 @@
 
     <script type="text/javascript">
         var isUserCopy = @Html.Raw(Json.Encode(isCopyRequest));
+        var submitted = false;
         $(function() {
 
             $('#btnSave').click(function(e) {
@@ -54,6 +55,7 @@
             });
 
             var validator = $("#target").validate({
+                ignore: '',
                 rules: {
                     "User.UserID": {
                         required: true
@@ -103,7 +105,7 @@
                     }
                     ,
                     "User.Customer_Id": {
-                        required: "@Translation.GetForJS("Du måste ange en standardkund", Enums.TranslationSource.TextTranslation)"
+                        required: "@Translation.GetForJS("Du måste ange en standardkund")"
                     },
 
                     "NewPassword": {
@@ -113,6 +115,23 @@
                     "ConfirmPassword": {
                         equalTo: "@Translation.GetForJS("Kontrollera att lösenord och bekräftat lösenord stämmer överens")"
                     }
+                },
+                showErrors: function(errorMap, errorList) {
+                    if (submitted) {
+                        var liSet = '';
+                        $('li[tab]').removeClass('error');
+                        $.each(errorList, function () {
+                            const tabId = $(this.element).parents('.tab-pane')[0].id;
+                            $('li[tab="' + tabId + '"]').addClass('error');
+                            liSet += '<li>' + this.message + '</li>';
+                        });
+                        $('.validation-summary-valid ul').html(liSet);
+                        submitted = false;
+                    }
+                    this.defaultShowErrors();
+                },          
+                invalidHandler: function(form, validator) {
+                    submitted = true;
                 },
                 submitHandler: function(form) {
                     submitForm();
