#7516 4 - File Access monitoring/auditing feature - added ui

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -275,6 +275,6 @@
             confirmDialog: confirmationDialog
         };
 
-        window.DataPrivacyForm.Init(settings);
+        window.dataPrivacyForm.init(settings);
     });
 </script>
