--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
@@ -21,9 +21,15 @@
             </li>
             <li id="menu5" style="display: none"></li>
             <li id="menu6" style="display: none">
-                <span id="tooltip-button-wrapper" data-title='@Translation.GetCoreTextTranslation("Spara i favoriter för att aktivera")'>
+                <span id="tooltip-button-wrapper" data-title=''>
                     <button class="btn" id="privacyRunBtn">@Translation.GetCoreTextTranslation("Kör")</button>
                     <i id="inProcessLoader" class="gif-loader" style="display: none">&nbsp;</i>
+                </span>
+            </li>
+            <li id="menu8" style="display: none">
+                <span id="tooltip-button-wrapper" data-title=''>
+                    <button class="btn" id="logFilesRunBtn">@Translation.GetCoreTextTranslation("Kör")</button>
+                    <i id="logFilesInProcessLoader" class="gif-loader" style="display: none">&nbsp;</i>
                 </span>
             </li>
         </ul>
@@ -45,6 +51,12 @@
 
                 <li id="tab7" onclick="toggleMenuItems(7)">
                     <a href="#fragment-7">@Translation.GetCoreTextTranslation("Dataintegritet") &ndash; @Translation.GetCoreTextTranslation("Historik")</a>
+                </li>
+            }
+            @if (Model.HasDataSecurityInformationPermission)
+            {
+                <li id="tab6" onclick="toggleMenuItems(8)">
+                    <a href="#fragment-8">@Translation.GetCoreTextTranslation("Nedladdade filer")</a>
                 </li>
             }
         </ul>
@@ -69,7 +81,7 @@
                     </thead>
                     <tbody>
                         @foreach (var item in Model.GlobalSettings)
-                        { 
+                        {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.ApplicationName)
@@ -83,7 +95,7 @@
                                 <td>
                                     @DateTime.Now.ToLongTimeString()
                                 </td>
-                            </tr> 
+                            </tr>
                         }
                     </tbody>
                 </table>
@@ -99,7 +111,7 @@
                     </thead>
                     <tbody>
                         @foreach (var item in Model.HolidayHeaders)
-                        { 
+                        {
                             <tr>
                                 <td>
                                     <a href="@Url.Action("editholiday", "globalsetting", new { id = item.Value })">@item.Text</a>
@@ -109,27 +121,27 @@
                     </tbody>
                 </table>
                 @*<div class="container">
-                    <div class="row">
-                        <div class="span8">
-                            <table class="tableform" id="tblHoliday">
-                                <tr>
-                                    <td>
-                                        @Translation.GetCoreTextTranslation("Kalender", Enums.TranslationSource.TextTranslation)
-                                    </td>
-                                    <td>
-                                        @Html.DropDownListFor(model => model.HolidayHeader.Id, Model.HolidayHeaders, new { style = "width: auto;", id = "HolidayHeaderId", onchange = "changeHoliday(this.options[this.selectedIndex].value);" })
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-               <div class="container" id="holidays">
-                   
-                        @Html.Partial("_Holidays", Model)
-                
-                </div>*@
-                
+                 <div class="row">
+                     <div class="span8">
+                         <table class="tableform" id="tblHoliday">
+                             <tr>
+                                 <td>
+                                     @Translation.GetCoreTextTranslation("Kalender", Enums.TranslationSource.TextTranslation)
+                                 </td>
+                                 <td>
+                                     @Html.DropDownListFor(model => model.HolidayHeader.Id, Model.HolidayHeaders, new { style = "width: auto;", id = "HolidayHeaderId", onchange = "changeHoliday(this.options[this.selectedIndex].value);" })
+                                 </td>
+                             </tr>
+                         </table>
+                     </div>
+                 </div>
+             </div>
+            <div class="container" id="holidays">
+
+                     @Html.Partial("_Holidays", Model)
+
+             </div>*@
+
             </div>
             <div class="tab-pane tab-pane-border" id="fragment-3">
                 <table class="table table-striped table-bordered table-hover" id="tblWatchDateCalendarValue">
@@ -142,7 +154,7 @@
                     </thead>
                     <tbody>
                         @foreach (var item in Model.WatchDateCalendars)
-                        { 
+                        {
                             <tr>
                                 <td>
                                     <a href="@Url.Action("editwatchdate", "globalsetting", new { id = item.Value})">@item.Text</a>
@@ -152,31 +164,31 @@
                     </tbody>
                 </table>
             </div>
-            
+
             <div class="tab-pane tab-pane-border" id="fragment-4">
 
                 <div class="container">
                     <div class="row">
-                            <div>
-                                <table class="tableform" id="tblText">
-                                    <tr>
-                                        <td style="width:50px">
-                                            &nbsp;&nbsp;@Translation.GetCoreTextTranslation("Typ")
-                                        </td>
-                                        <td style="width:200px">
-                                            @Html.DropDownListFor(model => model.TextType.Id, Model.TextTypes, new { style = "width: auto;", id = "TextTypeId", onchange = "changeTextType(this.options[this.selectedIndex].value);" })                                            
-                                        </td>
-                                        <td>
-                                            @Html.TextBoxFor(model => model.SearchTextTr, new { maxlength = "50"})
-                                            @Html.DropDownListFor(model => model.SearchConditions, Model.SearchConditions, new { style = "width: auto;", id = "SearchId", onchange = "" })
-                                            <input type="button" id="searchQueryBtn" onclick ="DoSearch();" value="@Translation.GetCoreTextTranslation("Sök")" class="btn" onclick="submit();" />
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
+                        <div>
+                            <table class="tableform" id="tblText">
+                                <tr>
+                                    <td style="width:50px">
+                                        &nbsp;&nbsp;@Translation.GetCoreTextTranslation("Typ")
+                                    </td>
+                                    <td style="width:200px">
+                                        @Html.DropDownListFor(model => model.TextType.Id, Model.TextTypes, new { style = "width: auto;", id = "TextTypeId", onchange = "changeTextType(this.options[this.selectedIndex].value);" })
+                                    </td>
+                                    <td>
+                                        @Html.TextBoxFor(model => model.SearchTextTr, new { maxlength = "50" })
+                                        @Html.DropDownListFor(model => model.SearchConditions, Model.SearchConditions, new { style = "width: auto;", id = "SearchId", onchange = "" })
+                                        <input type="button" id="searchQueryBtn" onclick="DoSearch();" value="@Translation.GetCoreTextTranslation("Sök")" class="btn" onclick="submit();" />
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                     <div id="translationList">
-                        @Html.Partial("_TranslationsList", Model.GridModel) 
+                        @Html.Partial("_TranslationsList", Model.GridModel)
                     </div>
                 </div>
             </div>
@@ -185,24 +197,32 @@
                 <div id="selfServiceError" class="alert alert-error alert-dismissable" style="display: none"></div>
                 <table class="tableform">
                     <tbody>
-                    <tr>
-                        <td class="span4">@Translation.GetCoreTextTranslation("Visa alla kunder på Ärendeöversikten")</td>
-                        <td>@Html.CheckBox("multiCustomersSearch", Model.GlobalSettings.FirstOrDefault().MultiCustomersSearch == 1, new {@class = "switchcheckbox"})</td>
-                    </tr>
+                        <tr>
+                            <td class="span4">@Translation.GetCoreTextTranslation("Visa alla kunder på Ärendeöversikten")</td>
+                            <td>@Html.CheckBox("multiCustomersSearch", Model.GlobalSettings.FirstOrDefault().MultiCustomersSearch == 1, new { @class = "switchcheckbox" })</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
-            
+
             @if (Model.HasDataPrivacyAccess)
             {
                 <!-- Data Privacy  -->
                 <div class="tab-pane tab-pane-border" id="fragment-6">
-                        @Html.Action("DataPrivacy")
-                </div> 
+                    @Html.Action("DataPrivacy")
+                </div>
 
                 <!-- Data Privacy History -->
                 <div class="tab-pane tab-pane-border" id="fragment-7">
-                        @Html.Action("DataPrivacyHistory")
+                    @Html.Action("DataPrivacyHistory")
+                </div>
+            }
+
+            @if (Model.HasDataSecurityInformationPermission)
+            {
+                <!-- Case Files View Log -->
+                <div class="tab-pane tab-pane-border" id="fragment-8">
+                    @Html.Action("FilesViewLog")
                 </div>
             }
 
