--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -5,7 +5,7 @@
     @{
     var model = Html.MasterModel();
     
-    var GlobalSetting = model.GlobalSettings.Where(x => x.ApplicationName != null).FirstOrDefault();
+    var GlobalSetting = model.GlobalSettings.FirstOrDefault(x => x.ApplicationName != null);
 }
 <head>
     <meta content="html/text; charset=utf-8" />
